Fix video on mobile view

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -92,3 +92,15 @@
   @apply bg-red-900;
   @apply text-white;
 }
+
+.iframe-home {
+  width: 560px;
+  height: 315px;
+}
+
+@media (max-width: 1024px) {
+  .iframe-home {
+    width: 300px;
+    height: 150px;
+  }
+}
